# fastapi-admin-vue

./: AGENTS.md
service/: .dockerignore  .env  .env.development  .env.development.example  .env.production.example  .env.staging.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
service/.codex/: ARCHITECTURE.md  BOUNDARY.md  PROJECT.md  WORKFLOW.md
service/alembic/: env.py  script.py.mako
service/config/: env.py  mysql_serve.py  rate_limit.py  redis_serve.py
service/deploy/: nginx.conf
service/interceptors/: http_intercept.py
service/middleware/: idempotency_middleware.py  logger_middleware.py  observability_middleware.py  response_intercept.py  telemetry.py
service/module_admin/: error_codes.py  v1.py
service/scripts/: __init__.py  backup_database.py  migrate_database.py  task_worker.py
service/test/: conftest.py  test_admin_api_async.py  test_admin_operations.py  test_app_factory.py  test_auth_security.py  test_authorization.py  test_captcha_security.py  test_data_scope.py  test_fastapi_admin.py  test_health.py  test_integration.py  test_log_module.py  test_login_ip_lock.py  test_main.py  test_menu_dto.py  test_menu_tree_validation.py  test_migration_config.py  test_mysql_session.py  test_observability.py  test_p1_security.py  test_p2_regressions.py  test_platform_capabilities.py  test_rate_limit.py  test_regressions.py  test_response_interceptor.py  test_schema_integrity.py  test_security_hardening.py  test_security_regressions.py  test_settings.py  test_sql_init.py  (+1 more)
(+152 files in other folders)
